Bevel Vertex Tool issues. #43239

Closed
opened 2015-01-13 16:04:06 +01:00 by paul geraskin · 17 comments
Member

System Information
Linux

Blender Version
2.73 daily

Short description of error
I found some issues when I use BevelVertexTool (Ctrl+Shift+B hotkey).

  1. Bevel PolyLine does not add segments. Even if i add 8 segments - there will be only one segment beveled. Here is video test: http://youtu.be/gNbdKG3bmX4

  2. Bevel with many segments does not make rounded corners. Here is My video test: http://youtu.be/j-J-p2etHZQ

Here testing file: temp.blend

Exact steps for others to reproduce the error
Select and use Ctrl+Shift+B.

**System Information** Linux **Blender Version** 2.73 daily **Short description of error** I found some issues when I use BevelVertexTool (Ctrl+Shift+B hotkey). 1) Bevel PolyLine does not add segments. Even if i add 8 segments - there will be only one segment beveled. Here is video test: http://youtu.be/gNbdKG3bmX4 2) Bevel with many segments does not make rounded corners. Here is My video test: http://youtu.be/j-J-p2etHZQ Here testing file: [temp.blend](https://archive.blender.org/developer/F136964/temp.blend) **Exact steps for others to reproduce the error** Select and use Ctrl+Shift+B.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @PaulGeraskin

Added subscriber: @PaulGeraskin
Howard Trickey was assigned by Sergey Sharybin 2015-01-13 17:03:16 +01:00

Added subscribers: @howardt, @Sergey

Added subscribers: @howardt, @Sergey

@howardt, mind having a look here?

@howardt, mind having a look here?
Member

With respect to #1, yes that is a bug. I will attempt a fix.
With respect to #2, it is not obvious to me that those edges should be curved, or if so, which way they should be curved. I guess the grease pencil lines in the video are meant to show how you thought they should be curved but I was surprised - I actually thought you were going to say you wanted the curves to go the other way (curving into the interior of the cube faces. I think this is a case where there is no obviously correct answer. Often this means a case where a control needs to be added to give the artist a choice. I will consider this, though there are those who argue too many controls is confusing.

With respect to #1, yes that is a bug. I will attempt a fix. With respect to #2, it is not obvious to me that those edges should be curved, or if so, which way they should be curved. I guess the grease pencil lines in the video are meant to show how you thought they should be curved but I was surprised - I actually thought you were going to say you wanted the curves to go the other way (curving into the interior of the cube faces. I think this is a case where there is no obviously correct answer. Often this means a case where a control needs to be added to give the artist a choice. I will consider this, though there are those who argue too many controls is confusing.
Author
Member

Hello @howardt .

About #2 Here is i try to explain how it should go:
cache1.png

Most 3d packages do rounding for vertices too.

Hello @howardt . About #2 Here is i try to explain how it should go: ![cache1.png](https://archive.blender.org/developer/F141649/cache1.png) Most 3d packages do rounding for vertices too.
Member

OK Paul. I still contend that it is up for debate whether or not that is the "obviously correct" behavior. Do other 3d packages agree that that is the right thing to do? Anyway, I will probably try to program it up (it kind of goes with what I suspect you want for #1 anyway), and see what people think.

OK Paul. I still contend that it is up for debate whether or not that is the "obviously correct" behavior. Do other 3d packages agree that that is the right thing to do? Anyway, I will probably try to program it up (it kind of goes with what I suspect you want for #1 anyway), and see what people think.
Author
Member

No problem! I just point that Edges are beveled smoothly. But points not.
cache1.png

Thanks for the development.

No problem! I just point that Edges are beveled smoothly. But points not. ![cache1.png](https://archive.blender.org/developer/F141656/cache1.png) Thanks for the development.
Member

I fixed the bug reported in part one of this report, with commit dce59530d0

I fixed the bug reported in part one of this report, with commit dce59530d0
Author
Member

Yahooo!!! Thank you a lot!

Yahooo!!! Thank you a lot!

Added subscriber: @Tunge

Added subscriber: @Tunge

Howardt could this be also implemented into the bevel-modifier?
For a lot of cases it would be extreme useful. Imagine a non-destructive bevel modifier in conjunction with a solidify or a screw modifier...
Bildschirmfoto_2015-02-13_um_00.33.00.png

Howardt could this be also implemented into the bevel-modifier? For a lot of cases it would be extreme useful. Imagine a non-destructive bevel modifier in conjunction with a solidify or a screw modifier... ![Bildschirmfoto_2015-02-13_um_00.33.00.png](https://archive.blender.org/developer/F143062/Bildschirmfoto_2015-02-13_um_00.33.00.png)

Added subscriber: @lowercase

Added subscriber: @lowercase

thanks! #1 is super useful, but a bit hidden... when working with wire edges shouldn't bevel mode switch to only vertices..?
the F6 workflow feels weird here, you bevel but don't see anything, then use F6 to use 'vertex only' and it works, but it won't remember the setting later

totally unrelated, but having this also for bezier curves would be so cool

thanks! #1 is super useful, but a bit hidden... when working with wire edges shouldn't bevel mode switch to only vertices..? the F6 workflow feels weird here, you bevel but don't see anything, then use F6 to use 'vertex only' and it works, but it won't remember the setting later totally unrelated, but having this also for bezier curves would be so cool
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

After some consultation with others, the consensus is that the current behavior in the video for report 2 is not a bug, and while it could be made an option to do as you want, it should not be the default. So I'm closing this bug for now, and will keep in mind that perhaps it could be an option in the future (though we can't keep adding more and more options to bevel). The first half of the bug was fixed a while ago, so calling this 'Resolved'.

After some consultation with others, the consensus is that the current behavior in the video for report 2 is not a bug, and while it could be made an option to do as you want, it should not be the default. So I'm closing this bug for now, and will keep in mind that perhaps it could be an option in the future (though we can't keep adding more and more options to bevel). The first half of the bug was fixed a while ago, so calling this 'Resolved'.
Author
Member

Ok.

Ok.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43239
No description provided.